# ollama-proxy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ollama_proxy/: __init__.py  app.py  backends.py  cli.py  config.py
tests/: test_app.py  test_backends.py  test_cli.py  test_config.py
